# python-project-50

./: README.md  pyproject.toml
diff/scripts/: gendiff.py
